src/scss/block/text.scss
@import "~scss/_vars";

.blocks {
	.block.blockText { font-size: 16px; line-height: 24px; letter-spacing: 0.08px; font-weight: 400; word-wrap: break-word; }
	.block.blockText {
		.wrap { flex: auto; position: relative; padding: 0px; width: 100%; }
		.value { -webkit-user-modify: read-write-plaintext-only; width: 100%; overflow: hidden; }

		.placeHolder { 
			color: $colorDarkGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; 
			width: 100%; height: 100%; cursor: text; pointer-events: none;
		}

		lnk { cursor: pointer; color: inherit; border-bottom: 1px solid $colorDarkGrey; text-decoration: none; }
		
		kbd { display: inline; font-family: 'Plex'; border-radius: 2px; background: rgba(172,169,150,0.15); }

		smile {
			img { position: static !important; left: auto !important; top: auto !important; margin: 0px !important; vertical-align: middle; }
		}
		smile * { display: inline; }
		smile .loaderWrapper { display: inline-block; }

		emoji { display: inline; user-select: all; }
		emoji * { user-select: all; }
		emoji {
			name { display: none; }
		}

		mention { cursor: pointer; white-space: nowrap; display: inline; user-select: all; }
		mention * { user-select: text; }
		mention {
			smile { display: none; position: relative; z-index: 1; }
			.space { width: 4px; height: 20px; margin-top: -4px; vertical-align: middle; }

			name { display: inline; white-space: normal; vertical-align: top; position: relative; border-bottom: 1px solid $colorDarkGrey; }
		}

		mention.withImage {
			smile { display: inline; }
		}
		mention.withImage.c24 name bgcolor:first-child { margin-left: -22px; padding-left: 22px; }
		mention.withImage.c26 name bgcolor:first-child { margin-left: -22px; padding-left: 22px; }
		mention.withImage.c28 name bgcolor:first-child { margin-left: -27px; padding-left: 27px; }
		mention.withImage.c32 name bgcolor:first-child { margin-left: -34px; padding-left: 34px; }
		
		mention:hover {
			name::before { border-color: $colorBlack; }
		}

		bold { font-weight: 600; }
		italic { font-style: italic; }
		strike { text-decoration: line-through; }
		
		.markers { white-space: nowrap; }
		.markers {
			.marker { 
				text-align: center; display: inline-block; vertical-align: top; position: relative; width: 24px; height: 24px; 
				line-height: 24px; margin-right: 6px;
			}
			.marker {
				.icon { display: inline-block; }
			}
			
			.marker.number { vertical-align: baseline; min-width: 24px; width: auto; }
			.marker.number > span { min-width: 100%; display: inline-block; text-align: center; }
			
			.marker.check, .marker.toggle { cursor: pointer; }
			.marker.check, .marker.toggle {
				img { width: 100%; height: 100%; }
			}
		}
	}

	.block.blockText.isReadOnly > .wrapContent > .selectable > .dropTarget .marker.check { cursor: default; }
	.block.blockText.isReadOnly > .wrapContent > .selectable > .dropTarget .value { min-height: 24px; }
	.block.blockText.isReadOnly > .wrapContent > .selectable > .dropTarget .placeHolder { display: none; }

	.block.blockText.isReadOnly.code {
		.additional { display: none; }
	}
	.block.blockText.isReadOnly.code > .wrapContent > .selectable > .dropTarget { padding: 16px; }

	.block.blockText.description.isReadOnly { display: none; }
	.block.blockText.description { display: none; }

	.block.blockText.isChecked > .wrapContent > .selectable > .dropTarget * { color: $colorDarkGrey !important; }

	.block.blockText > .wrapContent > .selectable > .dropTarget { padding: 3px 0px; }

	.block.blockText.title { padding: 10px 0px 22px 0px; @include text-title; }
	.block.blockText.title {
		.placeHolder { 
			color: $colorDarkGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; 
			width: 100%; height: 100%; cursor: text; 
		}
		.value { -webkit-user-modify: read-write-plaintext-only; }
	}
	.block.blockText.title > .wrapContent > .selectable > .dropTarget { padding: 4px 0px 2px 0px; }
	.block.blockText.title > .wrapContent > .selectable > .selectionOver { display: none; }

	.block.blockText.description { @include text-description; }
	.block.blockText.description > .wrapContent > .selectable > .selectionOver { display: none; }

	.block.blockText.header1 { padding: 22px 0px 0px 0px; }
	.block.blockText.header1 > .wrapContent > .selectable > .dropTarget { @include text-header1; padding: 4px 0px 2px 0px; }
	.block.blockText.header1 > .wrapContent > .selectable > .dropTarget mention .space { width: 6px; height: 32px; }
	
	.block.blockText.header2 { padding: 14px 0px 0px 0px; }
	.block.blockText.header2 > .wrapContent > .selectable > .dropTarget { @include text-header2; padding: 3px 0px 2px 0px; }
	.block.blockText.header2 > .wrapContent > .selectable > .dropTarget mention .space { width: 5px; height: 28px; }
	
	.block.blockText.header3 { padding: 14px 0px 0px 0px; }
	.block.blockText.header3 > .wrapContent > .selectable > .dropTarget { @include text-header3; padding: 2px 0px 3px 0px; }
	.block.blockText.header3 > .wrapContent > .selectable > .dropTarget mention .space { width: 5px; height: 26px; }
	
	.block.blockText.quote { padding: 6px 0px 6px 0px; }
	.block.blockText.quote > .wrapContent > .selectable > .dropTarget { @include text-quote; padding: 2px 0px 3px 0px; }
	.block.blockText.quote > .wrapContent > .selectable > .dropTarget mention .space { width: 5px; height: 26px; }
	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .additional > .line { 
		width: 0px; height: calc(100% + 5px); position: absolute; left: 11px; top: -2px; border-left: 2px solid $colorOrange; 
	}
	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .wrap { padding-left: 28px; }
	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .wrap > .placeHolder { left: 28px; }

	.block.blockText.quote.align2 > .wrapContent > .selectable > .dropTarget > .flex > .wrap { padding-left: inherit; padding-right: 28px; }
	.block.blockText.quote.align2 > .wrapContent > .selectable > .dropTarget > .flex > .line { left: auto; right: 11px; }
	.block.blockText.quote.align2 > .wrapContent > .selectable > .dropTarget > .flex > .wrap > .placeHolder { left: auto; right: 28px; }
	
	.block.blockText.code { padding: 6px 0px; }
	.block.blockText.code > .wrapContent > .selectable > .dropTarget { padding: 41px 16px 16px 16px; background: rgba(247,245,240,0.5); }
	.block.blockText.code > .wrapContent > .selectable > .dropTarget > .flex { position: static; } 
	.block.blockText.code > .wrapContent > .selectable > .dropTarget > .flex {
		.value { font-family: 'Plex'; @include text-common; tab-size: 4; }
		.additional { position: absolute; top: 9px; left: 16px; z-index: 1; display: block; }
		.additional {
			.select { border: 0px; color: $colorDarkGrey; @include text-common; border-radius: 0px; padding: 0px 20px 0px 0px; }
			.select {
				.name { overflow: visible; }
			}
			.select:hover, .select.active { background: none; }
			
			.icon.codeWrap { width: 20px; height: 20px; }
		}
	}

	.block.blockText.code.isUnwrapped > .wrapContent > .selectable > .dropTarget .value {
		white-space: nowrap; overflow-x: auto;
	}

	.block.blockText.paragraph > .wrapContent.bgColor > .selectable > .dropTarget, 
	.block.blockText.header1 > .wrapContent.bgColor > .selectable > .dropTarget,
	.block.blockText.header2 > .wrapContent.bgColor > .selectable > .dropTarget,
	.block.blockText.header3 > .wrapContent.bgColor > .selectable > .dropTarget
	{ padding-left: 8px; padding-right: 8px;  }
}

.editorWrapper.isTask {
	.blocks .block.blockText.title { @include text-header1; }
	.blocks .block.blockText.title {
		.marker { margin: 3px 12px 0px 0px; }
	}
}

